# bicerin

./: .gitignore  CMakeLists.txt  vcpkg.json
include/core/: apu.h  bus.h  cartridge.h  cpu.h  joypad.h  mbc1.h  ppu.h  system.h  timer.h
src/core/: CMakeLists.txt  apu.cpp  bus.cpp  cartridge.cpp  cpu.cpp  joypad.cpp  mbc1.cpp  ppu.cpp  system.cpp  timer.cpp
src/frontend/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/core/: cpu_test.cpp  joypad_test.cpp  ppu_test.cpp  timer_test.cpp
